bluec-tests/tests/valid/types_short/multi/global_var.c
short int s = 30000;

short return_s(void) {
    return s;
}

int return_s_as_int(void) {
    return s;
}