bluec-tests/tests/invalid/types_short/fun_name_long.c
int short(void) {
    return 4;
}

int main(void){
    return short();
}